--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,79 @@ nav {
     align-items: center;
     justify-content: center;
     text-align: center;
+    border: 1px solid black;
+    padding: 20px;
+    max-width: 400px;
+    margin: 20px auto;
 }
 
+.frontend-section h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .frontend-section p {
+    font-size: 16px;
+    text-align: center;
+  }
+
+  main {
+    display: flex;
+    justify-content: space-between;
+    max-width: 100%;
+    margin: 20px auto;
+    padding: 20px;
+  }
+
+  main div {
+    flex: 1;
+    min-width: 280px;
+    margin: 10px;
+    padding: 15px;
+  }
+
+  h3 {
+
+    margin-bottom: 10px;
+  }
+  
+  p {
+    margin: 5px 0;
+  }
+  
+  ul {
+    padding-left: 20px;
+  }
+  
+  a {
+    display: block;
+    margin-top: 5px;
+    color: blue;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+
+  .reviews {
+    max-width: 100%;
+    margin: 20px auto;
+    padding: 20px;
+  }
+
+  .reviews > h3 {
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
+.review-one .review-two .review-three {
+    background: #f9f9f9;
+    display: flex;
+    padding: 15px;
+    margin-bottom: 10px;
+  }
+  
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -78,6 +149,9 @@ nav {
   nav {
     margin-top: 10px;
 }
+main{
+    flex-direction: column;
+ }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
